# GPT_teacher-3.37M-cn

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EN.md  config.yaml  pyproject.toml  readme_tech_supplement.md  requirements.txt  run.py  test_debug.py  web_ui.py
.github/workflows/: ci.yml
analysis/: README.md  analyze_data_topics.py  analyze_model_params.py  analyze_original_data.py  analyze_original_topics.py  analyze_short_questions.py  debug_forward.py  debug_special_tokens.py  debug_tokenization.py  investigate_token_180.py
checkpoints/: last.pt  model.json  quantized.pt  train_history.json  train_time.txt
checkpoints/backup/: train_history.json  train_time.txt
config/: config.yml
data/: prepare_data.py  test.jsonl  test_acceptance.jsonl  train.jsonl  train_final_500_complete.jsonl  train_minimal.jsonl  train_simple_6.jsonl  val.jsonl  val_acceptance.jsonl  val_clean.jsonl
docs/: research_2025.md
notebooks/: tutorial.ipynb
scripts/: README.md  docker_entrypoint.py  push_to_hf.py
src/: __init__.py  build_tokenizer.py  data.py  evaluate.py  export_safetensors.py  infer.py  inspect_tokenizer.py  model.py  test_acceptance.py  tokenizer.py  train.py  visualize.py  web_demo.py
tests/: README.md  check_checkpoint.py  check_data.py  check_original_data.py  check_raw_completion.py  check_test_answers.py  conftest.py  test_data.py  test_generalization.py  test_infer.py  test_inference_format.py  test_model.py  test_tokenizer.py  test_utils.py  verify_data.py  verify_inference_quality.py
tokenizer/: tokenizer.json
tools/: README.md  batch_test_inference.py  fix_data_distribution.py  fix_format_error.py  optimize_dataset.py  standardize_data.py
