[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-teacher"
version = "1.0.0"
description = "A small-scale GPT model for teaching and demonstration"
authors = [
    {name = "GPT Teacher Team", email = "contact@gpt-teacher.ai"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.12.0",
    "tokenizers>=0.13.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
    "starlette<1.0.0",
    "huggingface_hub<0.25.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/gpt-teacher/gpt-teacher"
Documentation = "https://gpt-teacher.readthedocs.io"
Repository = "https://github.com/gpt-teacher/gpt-teacher"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
